# ore-app

./: .gitignore  AppEntitlements.entitlements  Cargo.toml  Dioxus.toml  Icon.icns  Info.plist  README.md  android.bundle.sh  android.env  android.update.sh  build.rs  empty.version  index.html  input.css  log4  package-lock.json  package.json  plan  rust-toolchain.toml  steps  tailwind.config.js  tauri.conf.json  todos.txt
.cargo/: config.toml
.github/macos/: entitlements.plist
.github/workflows/: build-macos.yml  build-windows.yml  publish.yaml  release.yaml
icons/: icon.icns
miner/: Cargo.toml  README.md
miner-types/: Cargo.toml
miner-types/src/: lib.rs
miner-web/: Cargo.toml
miner-web/src/: lib.rs
miner/src/: error.rs  lib.rs
public/: .DS_Store.br  README.md  blink-upgrade.png.br  blink-upgrade.webp.br  favicon.png.br  icon-v1.png.br  icon.png.br  listed-tokens.yaml  metadata-v2.json  metadata-v2.json.br  metadata.json  metadata.json.br  miner.js  miner_bg.wasm  package.json  releases.json  rock-1-desktop.webp.br  rock-2-desktop.webp.br  rock-3-desktop.webp.br  social-1.webp.br  tailwind.css  tailwind.css.br  tailwindcss  wallet.js  wallet.js.LICENSE.txt.br  wallet.js.br  worker.js  worker.js.br
public/config/: listed-boosts.yaml  listed-pools.yaml  listed-tokens.yaml  unlisted-boosts.yaml  unlisted-tokens.yaml
public/fonts/: .DS_Store.br  Geist-Black.otf.br  Geist-Bold.otf.br  Geist-Light.otf.br  Geist-Medium.otf.br  Geist-Regular.otf.br  Geist-SemiBold.otf.br  Geist-Thin.otf.br  Geist-UltraBlack.otf.br  Geist-UltraLight.otf.br  GeistMono-Black.otf.br  GeistMono-Bold.otf.br  GeistMono-Light.otf.br  GeistMono-Medium.otf.br  GeistMono-Regular.otf.br  GeistMono-SemiBold.otf.br  GeistMono-Thin.otf.br  GeistMono-UltraBlack.otf.br  GeistMono-UltraLight.otf.br  RoobertTRIAL-Bold.otf.br  RoobertTRIAL-BoldItalic.otf.br  RoobertTRIAL-Heavy.otf.br  RoobertTRIAL-HeavyItalic.otf.br  RoobertTRIAL-Light.otf.br  RoobertTRIAL-LightItalic.otf.br  RoobertTRIAL-Medium.otf.br  RoobertTRIAL-MediumItalic.otf.br  RoobertTRIAL-Regular.otf.br  RoobertTRIAL-RegularItalic.otf.br  RoobertTRIAL-SemiBold.otf.br  RoobertTRIAL-SemiBoldItalic.otf.br
script/: build.sh  cp.sh  release.sh
scripts/: build_android_aab.sh
serve/: Cargo.toml
serve/src/: main.rs
src/: browser.rs  cores.rs  file.rs  launcher.rs  logger.rs  main.rs  metrics.rs  miner.rs  route.rs  solana.rs  steel_app.rs  time.rs  utils.rs  worker.rs
src/components/: activity.rs  activity_indicator.rs  appearance.rs  back_button.rs  backup_keypair_warning.rs  balance.rs  banner.rs  breadcrumbs.rs  buttons.rs  chart.rs  code_block.rs  common.rs  copyable.rs  download.rs  footer.rs  heading.rs  holders.rs  home.rs  how_it_works.rs  icons.rs  import_key.rs  landing.rs  leaderboard.rs  mine.rs  miner.rs  miner_controller.rs  mod.rs  navbar.rs  navigation.rs  orb.rs  ore_economics.rs  ore_tokenomics.rs  ore_value.rs  page_not_found.rs  page_title.rs  pay.rs  power_bar.rs  qr.rs  settings.rs  spinner.rs  (+23 more)
src/components/buttons/: claim_button.rs  help_button.rs  mod.rs  submit_button.rs
src/components/claim/: confirm.rs  done.rs  edit.rs  mod.rs  preview.rs
src/components/claim_modal/: claim_confirm.rs  claim_done.rs  claim_edit.rs  claim_preview.rs  mod.rs
src/components/claim_v1/: confirm.rs  done.rs  edit.rs  mod.rs
src/components/common/: confirmation.rs  flex.rs  icons.rs  info.rs  mod.rs  orb.rs  spinner.rs  tooltip.rs
src/components/docs/: docs_button.rs  docs_drawer.rs  docs_drawer_wrapper.rs  docs_mining_content.rs  docs_staking_content.rs  docs_tokenomics_content.rs  mod.rs  utils.rs
src/components/export_key/: export_key_secret.rs  export_key_warning.rs  mod.rs  secret.rs  warning.rs
src/components/forms/: idle_deposit_form.rs  idle_stake_form.rs  idle_withdraw_form.rs  mod.rs  pair_deposit_form.rs  pair_stake_form.rs  stake_tabs.rs  (+11 more)
src/config/: listed_boosts.rs  listed_pools.rs  listed_tokens.rs  mod.rs  unlisted_boosts.rs  unlisted_tokens.rs  utils.rs
src/gateway/: async_result.rs  claim.rs  client.rs  confirm_signature.rs  error.rs  get_clock.rs  get_keypair.rs  get_proof.rs  get_transfers.rs  get_treasury.rs  initialize_proof_account.rs  initialize_token_account.rs  jupiter.rs  kamino.rs  meteora.rs  mine.rs  mod.rs  ore.rs  ore_program.rs  pfee.rs  pool.rs  priority_fee.rs  pubkey.rs  retry.rs  rpc.rs  rpc_native.rs  rpc_web.rs  solana.rs  spl.rs  token.rs  transaction_confirmation_status.rs  transfer.rs  ui_token_amount.rs  utils.rs  webworker.rs  wss.rs  wss_native.rs
src/hooks/: drawer_state.rs  mod.rs  on_transaction_success.rs  ui_state.rs  use_account.rs  use_appearance.rs  use_assets.rs  use_balance.rs  use_boost.rs  use_boosts.rs  use_claimable_yield.rs  use_clipboard.rs  use_date.rs  use_download_url.rs  use_escrow.rs  use_explorer.rs  use_gateway.rs  use_is_onboarded.rs  use_kamino.rs  use_keypair.rs  use_miner.rs  use_miner_native.rs  use_miner_toolbar_state.rs  use_miner_web.rs  use_ore_balance.rs  use_ore_supply.rs  use_persistent.rs  use_ping.rs  use_pools.rs  use_power_level.rs  use_priority_fee.rs  use_proof.rs  use_rpc.rs  use_screen_size.rs  use_should_migrate.rs  use_show_backup_warning.rs  use_sol_balance.rs  use_stake.rs  use_swap.rs  use_tokens.rs  (+11 more)
src/miner/: desktop.rs  mod.rs  web_worker.rs
src/pages/: analyze.rs  asset.rs  blog.rs  callback.rs  claim.rs  coming_soon.rs  creator.rs  deposit.rs  download.rs  idle.rs  landing.rs  market.rs  mine.rs  mine_comparison.rs  mod.rs  not_found.rs  pair.rs  pay.rs  pool.rs  post.rs  post_terms.rs  promote.rs  social.rs  stake.rs  swap.rs  topup.rs  trade.rs  transfer.rs  unlisted.rs  vault.rs
src/pool/: mod.rs
src/staker/: mod.rs
src/utils/: app_nap.rs  compute_units.rs  format.rs  liquidity_pair.rs  metrics.rs  mod.rs  serde.rs
src/wallet_adapter/: mod.rs
wallet-adapter/: README.md  package-lock.json  package.json  webpack.config.js
wallet-adapter-android/: Cargo.toml  build.sh  steps
wallet-adapter-android/.cargo/: config.toml
wallet-adapter-android/src/: lib.rs
wallet-adapter/src/: main.js  styles.css
(+161 files in other folders)
