[package]
name = "ore-app"
version = "1.1.0"
description = "ORE is a proof-of-work token everyone can mine."
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
documentation = "https://ore.supply"
repository = "https://github.com/regolith-labs/ore-app"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[features]
default = ["web"]
bundle = []
web = [
  "gloo",
  "gloo-storage",
  "js-sys",
  "serde-wasm-bindgen",
  "solana-client-wasm",
  "solana-extra-wasm",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "wasm-logger",
  "web-sys",
  "web-time",
]

[dependencies]
async-retry = "0.3.1"
async-std = "1.12.0"
bincode = "1.3.3"
bs58 = "0.4"
cached = { version = "0.47.0", features = ["async"] }
chrono = "0.4.34"
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-sdk = { version = "0.5", features = ["clipboard", "utils"] }
dioxus-logger = { version = "0.5" }
drillx = "2.0.0"
futures = "0.3.30"
futures-util = "0.3.30"
gloo = { version = "0.11.0", optional = true }
gloo-storage = { version = "0.3.0", optional = true }
is-url = { version = "1.0.4" }
js-sys = { version = "0.3.67", optional = true }
lazy_static = "1.4"
log = "0.4.20"
num-format = "0.4.4"
ore-api = "2.1.8"
ore-api-v1 = { package = "ore-program", version = "1.2" }
# ore-boost-api = { path = "../ore-boost/api", versio = "0.1.0" }
ore-relayer-api = "2.2.0"
ore-utils = "2.1.8"
ore-types = "0.0.9"
qrcode-generator = "4.1.9"
rand = "0.8.5"
reqwest = "0.11.24"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.3", optional = true }
serde_json = "1.0"
solana-client-wasm = { version = "1.18", optional = true }
solana-extra-wasm = { version = "1.18", optional = true }
solana-sdk = "1.18"
url = "2.5.0"
wasm-bindgen = { version = "0.2.91", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
web-time = { version = "1.0.0", optional = true }
tracing = "0.1.40"
base64 = "0.22.1"

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'console',
  'Clipboard',
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  "IdbFactory",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbTransaction",
  'MessageEvent',
  'Navigator',
  'Window',
  'Worker',
  'WorkerOptions',
  'WorkerType',
  'WorkerGlobalScope',
]

[patch.crates-io]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "742721bf" }
solana-client-wasm = { version = "1.18", git = "https://github.com/regolith-labs/solana-playground", branch = "master" }
solana-extra-wasm = { version = "1.18", git = "https://github.com/regolith-labs/solana-playground", branch = "master" }
# solana-client-wasm = { version = "1.18", path = "../solana-playground/wasm/solana-client" }
# solana-extra-wasm = { version = "1.18", path = "../solana-playground/wasm/utils/solana-extra" }
