[package]
name = "ore-app"
version = "1.1.1"
description = "Liquid digital gold."
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
documentation = "https://ore.supply"
repository = "https://github.com/regolith-labs/ore-app"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[features]
default = ["web"]
bundle = []
desktop = [
  "cargo-packager-updater",
  "core_affinity",
  "dioxus/desktop",
  "dioxus-sdk/clipboard",
  "directories",
  "env_logger",
  "fern",
  "solana-account-decoder",
  "solana-client",
  "solana-program",
  "solana-transaction-status",
  "spl-associated-token-account",
  "spl-memo",
  "spl-token",
  "spl-token-2022",
  "tokio",
]
web = [
  "dioxus/web",
  "gloo",
  "gloo-storage",
  "gloo-worker",
  "gloo-utils",
  "js-sys",
  "ore-miner-web",
  "serde-wasm-bindgen",
  "solana-client-wasm",
  "solana-extra-wasm",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "wasm-logger",
  "web-sys",
  "web-time",
]
directories = ["dep:directories"]

[dependencies]
anyhow = "1.0"
async-retry = "0.3.1"
async-std = "1.12.0"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.4"
bytemuck = "1.14.3"
cached = { version = "0.47.0", features = ["async"] }
cargo-packager-updater = { git = "https://github.com/regolith-labs/cargo-packager.git", subdirectory = "crates/updater", rev = "6cedc87", default-features = false, optional = true, features = [
  "native-tls",
] }
chrono = { version = "0.4", features = ["wasmbind"] }
core_affinity = { version = "0.8.1", optional = true }
dioxus = { version = "0.6.1", features = ["router"] }
dioxus-sdk = { version = "0.6", features = ["timing"] }
dioxus-logger = "0.6"
directories = { version = "6.0.0", optional = true }
drillx = "2.2"
env_logger = { version = "0.11.6", optional = true }
fern = { version = "0.6", optional = true }
fastrand = "2.3.0"
futures = "0.3.30"
futures-util = "0.3.30"
gloo = { version = "0.11.0", optional = true }
gloo-storage = { version = "0.3.0", optional = true }
gloo-worker = { version = "0.5.0", optional = true }
gloo-utils = { version = "0.2.0", optional = true }
is-url = { version = "1.0.4" }
js-sys = { version = "0.3.67", optional = true }
jupiter-swap-api-client = { git = "https://github.com/regolith-labs/jupiter-swap-api-client", package = "jupiter-swap-api-client", branch = "main" }
keyring = { version = "3.6.1", features = ["apple-native", "windows-native"] }
kliquidity-sdk = "0.0.1"
lazy_static = "1.4"
log = "0.4.20"
meteora-pools-sdk = "0.1"
meteora-vault-sdk = "0.1"
num_cpus = "1.16.0"
num-format = "0.4.4"
once_cell = "1.18"
ore-api = "3.0"
ore-boost-api = "1.2"
ore-miner-types = { path = "./miner-types" }
ore-miner-web = { path = "./miner-web", features = [
  "app",
], default-features = false, optional = true }
ore-pool-api = "1.3"
ore-pool-types = "1.2"
ore-types = "0.0.12"
qrcode-generator = "4.1.9"
rand = "0.8.5"
reqwest = "0.11.24"
rust_decimal = "1.36.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.3", optional = true }
serde_json = "1.0"
serde_yaml = "0.9"
solana-client-wasm = { version = "2.1", optional = true }
solana-extra-wasm = { version = "2.1", optional = true }
solana-sdk = "2.1"
solana-client = { version = "2.1", optional = true }
solana-account-decoder = { version = "2.1", optional = true }
solana-transaction-status = { version = "2.1", optional = true }
solana-program = { version = "2.1", optional = true }
spl-associated-token-account = { version = "^6", optional = true, features = [
  "no-entrypoint",
] }
spl-memo = { version = "^4", optional = true, features = ["no-entrypoint"] }
spl-token = { version = "^4", optional = true, features = ["no-entrypoint"] }
spl-token-2022 = { version = "^6", optional = true, features = [
  "no-entrypoint",
] }
steel = "3.0"
tokio = { version = "1.43.0", optional = true, features = ["full"] }
tracing = "0.1.40"
url = "2.5.0"
wasm-bindgen = { version = "0.2.99", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
web-time = { version = "1.0.0", optional = true }
zeroize = "1.3.0"


[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'BlobPropertyBag',
  'console',
  'Clipboard',
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  "IdbFactory",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbTransaction",
  'MessageEvent',
  'Navigator',
  'Window',
  'Worker',
  'WorkerOptions',
  'WorkerType',
  'WorkerGlobalScope',
]

[patch.crates-io]
solana-client-wasm = { version = "2.1", git = "https://github.com/regolith-labs/solana-playground", branch = "master" }
solana-extra-wasm = { version = "2.1", git = "https://github.com/regolith-labs/solana-playground", branch = "master" }
kliquidity-sdk = { git = "https://github.com/regolith-labs/kliquidity-sdk", branch = "master" }
meteora-pools-sdk = { git = "https://github.com/regolith-labs/meteora-pools-sdk", branch = "master" }
meteora-vault-sdk = { git = "https://github.com/regolith-labs/meteora-vault-sdk", branch = "master" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"
debug = 1
env = { RUST_LOG = "info" }

[profile.android-dev]
inherits = "dev"
