[package]
name = "ore-miner-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["worker"] # Enable worker by default
worker = []          # Worker-specific logic
app = []             # App-specific logic

[dependencies]
anyhow = "1.0"
drillx = "2.0.0"
gloo-worker = "0.5.0"
log = "0.4.20"
ore-miner-types = { path = "../miner-types" }
ore-pool-api = "1.2"
ore-pool-types = "1.2"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3", features = ["Performance"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.76"
