[package]
name = "ore-miner-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["worker"] # Enable worker by default
worker = []          # Worker-specific logic
app = []             # App-specific logic

[dependencies]
drillx = "2.0.0"
gloo-worker = { path = "../../gloo/crates/worker" }
log = "0.4.20"
ore-pool-api = "0.2.0"
ore-pool-types = { path = "../../ore-pool/types" }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3", features = ["Performance"] }
console_error_panic_hook = "0.1.7"
reqwest = "0.11.24"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.3" }
futures = "0.3.31"
js-sys = "0.3.76"
