[package]
name = "wallet-adapter-android"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = { version = "0.29.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.1", features = ["build"] }

[lib]
crate-type = ["cdylib"]
name = "wallet_adapter_android"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
