[package]
name = "wallet-adapter-android"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.1"                                            # Use the latest appropriate version
dioxus-mobile = { path = "../../dioxus/packages/mobile" }

[lib]
crate-type = ["cdylib", "rlib"] # Also build as a Rust library for ore-app
